# xtool

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  LICENSE  build.bat  build.sh  dev.Dockerfile  docker-compose.yml  meson.build  readme.md  todo.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake-multi-platform.yml
cross_compilation/: windows.txt
include/: args.hpp  constants.hpp  dolphin_manager.hpp  inspection.hpp  music_player.hpp  playlist.hpp  test_seed.hpp  xtool.hpp
include/dme/DolphinProcess/: DolphinAccessor.cpp
src/: args.cpp  dolphin_manager.cpp  inspection.cpp  main.cpp  music_player.cpp  playlist.cpp  test_seed.cpp
